# GDPI_CUADC_2026

./: .gitignore  00_备赛计划.md  02_进度追踪.md  90_Claude提示词与n8n流程可视化.md  LICENSE  README.md  _extract_pdf.py
05_知识贡献/: Git使用指南-VSCode图形界面.md  README.md
05_知识贡献/00_伍尚京/: 说明.md
05_知识贡献/01_潘科宇/: 说明.md
05_知识贡献/02_刘辰宇/: 说明.md
05_知识贡献/03_林悦超/: 说明.md
05_知识贡献/04_赖斯远/: 说明.md
05_知识贡献/05_陈智勇/: 说明.md
05_知识贡献/06_郑宇/: 说明.md
代码/: CODE_README.md  README.md
代码/2025code/: ceshi.cpp
代码/CZY/: 2026-07-16_比赛main升级工作记录.md
代码/CZY/比赛main工作版本/: COMPETITION_MAIN_README.md
代码/HIT2025code/: README.md  code1.1.cpp  code1.2.cpp  code1.3.cpp  code1.cpp  code2.cpp  code3.cpp  code4.1.cpp  code4.2.1.cpp  code4.2.2.cpp  code4.2.cpp  code4.cpp  code5.cpp  code6.cpp  code7.cpp  code8.cpp
代码/LCY/: AP_Gazebo_SITL安装操作清单.md  MAVROS抛投器最小测试清单.md  MAVROS比赛常用指令手册.md  PX4_MAVROS基本数据读取操作说明书.md
代码/LSY/: detector_node_center_buffer.py
代码/LSY/autonomous_drop_mission/: README.md
代码/LSY/cuadc_src/: CMakeLists.txt  ONNX_TEST_GUIDE.md  detector_node_flow.md  run_detector_onnx.sh
代码/NUC上面的测试功能包（不可以随便修改,可以复制里面的内容）/cuadc_control/: CMakeLists.txt  ctrl_README.md  package.xml
代码/NUC上面的测试功能包（不可以随便修改,可以复制里面的内容）/cuadc_control/launch/: one_key_takeoff.launch
代码/NUC上面的测试功能包（不可以随便修改,可以复制里面的内容）/cuadc_control/scripts/: one_key_takeoff.py
代码/NUC上面的测试功能包（不可以随便修改,可以复制里面的内容）/cuadc_src/: package.xml  src_README.md
代码/NUC上面的测试功能包（可以复制里面内容，不可以随便修改）/cuadc_control/: CMakeLists.txt  ctrl_README.md  package.xml
代码/cuadc_src/: CMakeLists.txt  README.md  README_AUTODROP.md  package.xml  src_README.md
代码/cuadc_src/config/: params.yaml
代码/cuadc_src/launch/: cuadc_run.launch  detector_node.launch  run_main.launch  run_servo_test.launch  runmain.launch  video_recorder.launch
代码/cuadc_src/models/: README.txt
代码/cuadc_src/scripts/: auto_drop_node.py  camera_node.py  detector_node.py  main.py  safe_flight_test.py  servo_test.py  video_recorder_node.py
代码/src-QClaw/d435i_detector/: CMakeLists.txt  README.md  cleanup_ros2.sh  package.xml  setup.cfg  setup.py
代码/src-QClaw/d435i_detector/d435i_detector/: __init__.py  d435i_publisher.py  yellow_detector.py
代码/src-QClaw/d435i_detector/launch/: d435i_detector.launch  d435i_detector.launch.py
代码/src-QClaw/d435i_detector/msg/: YellowCircle.msg
代码/src-QClaw/d435i_detector/resource/: d435i_detector
代码/src-QClaw/d435i_detector/scripts/: d435i_publisher.py  yellow_detector.py
代码/比赛main工作版本/: COMPETITION_MAIN_README.md
代码/比赛main工作版本/src/cuadc_vision/: CMakeLists.txt
代码/比赛main工作版本/src/cuadc_vision/launch/: auto_drop.launch  run_flight_recorder.launch  run_main.launch
代码/比赛main工作版本/src/cuadc_vision/msg/: GeoTarget.msg
代码/比赛main工作版本/src/cuadc_vision/scripts/: competition_mission_common.py
代码/视觉旧版本代码管理/src-1.0/: ROS1_D435i_YellowCircle_Ubuntu20.md
代码/视觉旧版本代码管理/src-1.1（最可用，30FPS）/: CODE_EXPLANATION.md  ROS1_D435i_YellowCircle_Ubuntu20.md
代码/视觉旧版本代码管理/src-1.2/: D435i 黄色圆检测 ROS1 代码说明.md  ROS1_D435i_YellowCircle_Ubuntu20.md
代码/视觉旧版本代码管理/src2.0/: CODE_EXPLANATION.md
代码/视觉旧版本代码管理/src2.1（二值化）/: CODE_EXPLANATION.md
代码/视觉旧版本代码管理/src3.0（录制视频）/: CODE_EXPLANATION.md  ROS1_D435i_YellowCircle_Ubuntu20.md
代码/视觉旧版本代码管理/src3.1（录制3个视频）/d435i_yellow_circle_detector/: CMakeLists.txt
代码/视觉旧版本代码管理/src3.1（录制3个视频）/d435i_yellow_circle_detector/scripts/: yellow_circle_detector.py
代码/视觉旧版本代码管理/src3.2（独立脚本）/: CODE_EXPLANATION.md  ROS1_D435i_YellowCircle_Ubuntu20.md
代码/视觉旧版本代码管理/src3.2（独立脚本）/d435i_yellow_circle_detector/: package.xml
代码/视觉旧版本代码管理/src3.2（独立脚本）/d435i_yellow_circle_detector/launch/: d435i_yellow_circle.launch
代码/视觉旧版本代码管理/src3.4（桌面脚本）/: CODE_EXPLANATION.md
代码/视觉旧版本代码管理/src4.0（三维检测）/: CODE_EXPLANATION.md
代码/视觉旧版本代码管理/src4.1（检测优化）/: CODE_EXPLANATION.md
代码/视觉旧版本代码管理/src4.3（显示固定）/: ROS1_D435i_YellowCircle_Ubuntu20.md
代码/视觉旧版本代码管理/src4.4(显示假的大地坐标)/: ROS1_D435i_YellowCircle_Ubuntu20.md
代码/视觉组旧版本代码管理/src-1.0/: CODE_EXPLANATION.md
代码/视觉组旧版本代码管理/src4.3（显示固定）/d435i_yellow_circle_detector/: CMakeLists.txt  package.xml
代码/视觉组旧版本代码管理/src4.3（显示固定）/d435i_yellow_circle_detector/launch/: d435i_yellow_circle.launch
代码/视觉组旧版本代码管理/src4.3（显示固定）/d435i_yellow_circle_detector/msg/: MissionTarget.msg  YoloDetection.msg
代码/视觉组旧版本代码管理/src4.3（显示固定）/d435i_yellow_circle_detector/scripts/: raw_video_recorder_node.py
代码/视觉组独立完成的部分（对应src4.4）/: 4.4_README.md  CODE_EXPLANATION.md  RUN_COMMANDS.md
备赛文档/: 00_备赛计划.md  01_队伍分工.md  02_进度追踪.md  03_参考仓库.md  04_学习任务与能力考核.md  04_工程规范.md  05_下一届培训计划.md  06_关于怎样培训新生的一点点思考.md  07_工程规范.md  07_系统程序架构.md  2026-07-06_会议通知.md  2026-07-07_给武老师的消息.md  ArduPilot_Copter45_SITL_Gazebo环境记录.md  ArduPilot_Guided模式控制指令详解.md  Git使用指南-VSCode图形界面.md  gazebo软件在环仿真知识和操作步骤.md  坐标系变换基础知识.md  队员GitHub操作通知.md  飞控控制环与传感器刷新率.md
备赛文档/代码解析/: GDPI_vs_HIT_差距分析.md  README.md
备赛文档/机架电装选型/: cuadc_2026_field.world  iris_with_standoffs_model.sdf  无刷电机选型问答整理_朗宇X4110S贴吧.md  飞机重量参数.md
机械结构/: README.md  ZD550起落架电池托.SLDPRT  ZD550起落架电池托.STEP  d435i相机支架（zd550下板）.STEP  抛投器挂板第一版.3mf  抛投器挂板第一版.STEP
机械结构/ZD550四旋翼无人机碳纤维机架模型图纸 stp格式/: D435i_Solid.SLDPRT  Frame ZD550.SLDASM  Frame ZD550.stp  Frame ZD5501.SLDASM  Imported.SLDASM  Imported.SLDPRT  Imported_10.SLDPRT  Imported_11.SLDPRT  Imported_12.SLDPRT  Imported_13.SLDPRT  Imported_14.SLDPRT  Imported_15.SLDPRT  Imported_16.SLDPRT  Imported_17.SLDPRT  Imported_18.SLDPRT  Imported_19.SLDPRT  Imported_2.SLDASM  Imported_2.SLDPRT  Imported_20.SLDPRT  Imported_21.SLDPRT  Imported_22.SLDPRT  Imported_23.SLDPRT  Imported_24.SLDPRT  Imported_25.SLDPRT  Imported_26.SLDPRT  Imported_27.SLDPRT  Imported_3.SLDASM  Imported_3.SLDPRT  Imported_4.SLDPRT  Imported_5.SLDPRT  Imported_6.SLDPRT  Imported_7.SLDPRT  Imported_8.SLDPRT  Imported_9.SLDPRT  d435i安装板^Frame ZD550.SLDPRT  d435i安装板^Frame ZD550.STEP  ~$Imported_19.SLDPRT  单抛投器.SLDPRT  导向筒.SLDPRT  导向筒.STEP  (+2 more)
机械结构/jx-pdi-6221mg-20kg-servo-motor-air-dropper-1.snapshot.2/: 650 서보모터 마운트.ipt  单抛投器.SLDPRT  单路抛投器.stp
附件/: 附件2：参赛承诺书.docx  附件3：2026中国大学生飞行器设计创新大赛XX竞赛项目设计报告模版.docx  附件4：参赛承诺书.docx  附件5：自主研发设计承诺书.docx  附件6：项目结果异议申诉表.docx  附件7：优秀指导教师申请表.docx  附件8：优秀团队申请表.docx
(+437 files in other folders)
