<?xml version="1.0"?>
<package format="2">
  <name>d435i_detector</name>
  <version>1.0.0</version>
  <description>D435i depth camera driver + yellow circle detector for ROS Noetic</description>
  <maintainer email="cuadc@todo.todo">cuadc</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
  </export>
</package>
